# manga-update-notifier

./: .gitignore  Architecture.md  Cargo.toml  Makefile.toml  README.md  compose.yaml  cron.sh
.cargo/: config.toml
.github/workflows/: ci.yml
.sqlx/: query-5d283c82d25a44679fa65874cf046116a1c38cbdd5ec6a092701e29ef3ba2ae6.json
Document/: Architecture.md  arch.drawio
_docs/: Architecture.md  arch.drawio
adapter/: Cargo.toml
adapter/migrations/: 20241013043830_start.down.sql  20241013043830_start.up.sql
adapter/src/database/model/: manga.rs
adapter/src/repository/: manga.rs
application/: Cargo.toml
application/src/: lib.rs
application/src/command/: fetch_latest_ep_command.rs  mod.rs
application/src/port/: latest_episode_fetcher.rs  mod.rs  notifier.rs
application/src/usecase/: check_and_notify.rs  check_update.rs  create_manga.rs  delete_manga.rs  mod.rs  update_manga.rs
backend/.cargo/: config.toml
backend/application/: Cargo.toml
backend/application/src/port/: latest_episode_fetcher.rs  mod.rs
backend/application/src/usecase/: check_update.rs  delete_manga.rs  mod.rs
backend/batch/: Cargo.toml
backend/domain/: Cargo.toml
backend/domain/src/: lib.rs
backend/domain/src/event/: latest_ep_updated.rs  mod.rs
backend/domain/src/manga/: episode.rs  short_title.rs
backend/domain/src/manga/portal/: manga_url.rs  mod.rs  portal_kind.rs
backend/domain/src/manga/repository/: mod.rs
backend/infra/: Cargo.toml
backend/infra/migrations/: 20251104122904_start.down.sql
backend/infra/src/: lib.rs
backend/infra/src/fetcher/: mod.rs  rss_fetcher.rs  webdriverpool.rs
backend/infra/src/fetcher/portal_kind/: comic_days.rs  comic_fuz.rs  comic_zenon.rs  gawgaw_monster.rs  heros_web.rs  jump_plus.rs  kado_comi.rs  mag_comi.rs  manga_one.rs  mod.rs  web_ace.rs  young_magazine.rs
backend/infra/src/notifier/: stdout.rs
backend/infra/src/repository/: mod.rs
backend/infra/src/repository/manga/fixtures/: manga.sql
backend/infra/src/repository/manga/model/: mod.rs  portal_kind.rs
backend/registry/src/: lib.rs
backend/server/: Cargo.toml
backend/server/src/: main.rs
backend/server/src/handler/: manga.rs  mod.rs
backend/server/src/model/: manga.rs
backend/server/src/route/: manga.rs
backend/shared/src/: logging.rs
batch/: Cargo.toml  Dockerfile
batch/config/: absence.yaml  existence.yaml
batch/src/: lib.rs  main.rs
batch/src/model/: mod.rs
batch/src/subcommand/: mod.rs  persist_absence.rs  persist_existence.rs
discord/: Cargo.toml
discord/src/: lib.rs
domain/: Cargo.toml
domain/src/: lib.rs
domain/src/command/: create_manga.rs  delete_manga.rs  mod.rs  update_manga.rs
domain/src/event/: fetch_error.rs  last_ep_detected.rs  mod.rs
domain/src/manga/: episode.rs  id.rs  mod.rs  portal_kind.rs  short_title.rs  title.rs
domain/src/manga/repository/: mod.rs
frontend/: .stylelintrc.cjs  components.json  package.json  pnpm-lock.yaml  postcss.config.cjs  tailwind.config.ts  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: index.css  main.tsx
frontend/src/app/: App.tsx  router.tsx
frontend/src/app/providers/: query-client.tsx  theme-provider.tsx
frontend/src/features/mangas/: types.ts
frontend/src/features/mangas/api/: createManga.ts  deleteManga.ts  getMangas.ts  updateManga.ts
frontend/src/features/mangas/components/: MangaForm.tsx  MangaPageContent.tsx  MangaTable.tsx
frontend/src/features/mangas/hooks/: useCreateManga.ts  useDeleteManga.ts  useMangas.ts  useUpdateManga.ts
frontend/src/shared/components/layout/: AppLayout.tsx
frontend/src/shared/lib/: env.ts  httpClient.ts
infra/: Cargo.toml
infra/migrations/: 20251104122904_start.up.sql
infra/src/fetcher/: mod.rs
infra/src/fetcher/portal_kind/: comic_days.rs  comic_fuz.rs  comic_zenon.rs  heros_web.rs  jump_plus.rs  kado_comi.rs  kimi_comi.rs  mod.rs  tonarino_yj.rs  web_ace.rs  young_magazine.rs
infra/src/notifier/: discord.rs  mod.rs
infra/src/repository/manga/: mod.rs
infra/src/repository/manga/model/: mod.rs  portal_kind.rs
kernel/: Cargo.toml
kernel/src/model/: manga.rs
kernel/src/repository/: manga.rs
manga/: Cargo.toml
manga/src/: aux.rs  chromedriver.rs  lib.rs
manga/src/checker/: degarashi.rs  drawing.rs  elder_elite.rs  fe_engage.rs  game_of_familia.rs  kaihuku_jutsushi.rs  kanteishi_saikyo.rs  kuga.rs  macros.rs  maou_rebellion.rs  matoseihei.rs  mod.rs  one_punch_man.rs  rezero_ch4.rs  rta_kaerenai.rs  satanophany.rs  sentai_taboo.rs  shield_yusha.rs  shujin_tensei.rs  tensei_coliseum.rs  toaru_anbu.rs  toaru_shinri.rs  yondome.rs
notifier/: Cargo.toml  Dockerfile
notifier/src/: main.rs
registry/: Cargo.toml
registry/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
server/src/handler/: manga.rs
server/src/model/: manga.rs
shared/: Cargo.toml
shared/src/: config.rs
