[package]
name = "batch"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
futures.workspace = true
kernel.workspace = true
shared.workspace = true
serde.workspace = true
serde_yaml.workspace = true
registry.workspace = true
tokio.workspace = true