[package]
name = "infra"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
domain.workspace = true
shared.workspace = true

sqlx.workspace = true
anyhow.workspace = true
derive-new.workspace = true
async-trait.workspace = true
url.workspace = true
uuid.workspace = true