[package]
name = "kernel"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
shared.workspace = true
anyhow.workspace = true
async-trait.workspace = true
derive-new.workspace = true
chrono.workspace = true
serde.workspace = true
sqlx.workspace = true