[package]
name = "manga"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
futures.workspace = true
thirtyfour.workspace = true
registry.workspace = true
shared.workspace = true
tokio.workspace = true
reqwest.workspace = true
rss.workspace = true