[package]
name = "batch"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license.workspace = true

[[bin]]
name = "notifier"
path = "src/main.rs"

[dependencies]
application.workspace = true
registry.workspace = true
shared.workspace = true

tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
futures.workspace = true