[package]
name = "domain"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
uuid.workspace = true
serde.workspace = true
sqlx.workspace = true
anyhow.workspace = true
url.workspace = true
async-trait.workspace = true
serde_json.workspace = true