[package]
name = "infra"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
domain.workspace = true
shared.workspace = true
application.workspace = true

sqlx.workspace = true
anyhow.workspace = true
derive-new.workspace = true
async-trait.workspace = true
url.workspace = true
uuid.workspace = true
serenity.workspace = true
thirtyfour.workspace = true
tokio.workspace = true
reqwest.workspace = true
rss.workspace = true
tracing.workspace = true